Add primeng button without styles

--- a/Storybook-Workshop/src/app/app.component.html
+++ b/Storybook-Workshop/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-button></app-button>
+<app-button [label]="'Click me'"
+            [type]="'secondary'"
+            (click)="handleClick()">
+</app-button>
