--- a/Storybook-Workshop/src/app/components/button/button.component.html
+++ b/Storybook-Workshop/src/app/components/button/button.component.html
@@ -1,1 +1,5 @@
-<p>button works!</p>
+<p-button [label]="label"
+          [styleClass]="'p-button-' + type"
+          [disabled]="disabled"
+          (onClick)="onClick()">
+</p-button>
