Add ArgTypes, add background parameters, add new props

--- a/Storybook-Workshop/src/app/components/button/button.component.html
+++ b/Storybook-Workshop/src/app/components/button/button.component.html
@@ -1,5 +1,7 @@
 <p-button [label]="label"
           [styleClass]="'p-button-' + type"
           [disabled]="disabled"
+          [ngClass]="classes"
+          [style]="{ 'background': backgroundColor }"
           (onClick)="onClick()">
 </p-button>
