New addons, mdx examples and parameters

--- a/Storybook-Workshop/src/app/app.component.html
+++ b/Storybook-Workshop/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-button [label]="'Click me'"
-            [type]="'secondary'"
-            (click)="handleClick()">
-</app-button>
+<!--<app-button [label]="'Bold'"-->
+<!--            [type]="'secondary'"-->
+<!--            (click)="handleClick()">-->
+<!--</app-button>-->
