Add badge component

--- a/Storybook-Workshop/src/app/app.component.html
+++ b/Storybook-Workshop/src/app/app.component.html
@@ -2,3 +2,4 @@
 <!--            [type]="'secondary'"-->
 <!--            (click)="handleClick()">-->
 <!--</app-button>-->
+<app-badge [value]="3"></app-badge>
